cabal-version:       2.2
name:                hslua-module-system
version:             1.1.3
synopsis:            Lua module wrapper around Haskell's System module.

description:         Provides access to system information and
                     functionality to Lua scripts via Haskell's `System`
                     module.
                     .
                     This package is part of HsLua, a Haskell framework
                     built around the embeddable scripting language
                     <https://lua.org Lua>.
homepage:            https://github.com/hslua/hslua
license:             MIT
license-file:        LICENSE
author:              Albert Krewinkel
maintainer:          tarleb@hslua.org
copyright:           © 2019-2025 Albert Krewinkel <tarleb@hslua.org>
category:            Foreign
extra-source-files:  test/test-system.lua
extra-doc-files:     CHANGELOG.md
                   , README.md
tested-with:         GHC == 8.8.4
                   , GHC == 8.10.7
                   , GHC == 9.0.2
                   , GHC == 9.2.8
                   , GHC == 9.4.8
                   , GHC == 9.6.7
                   , GHC == 9.8.4
                   , GHC == 9.10.2
                   , GHC == 9.12.2

source-repository head
  type:              git
  location:          https://github.com/hslua/hslua.git
  subdir:            hslua-module-system

common common-options
  default-language:    Haskell2010
  build-depends:       base                 >= 4.11   && < 5
                     , hslua-core           >= 2.1    && < 2.4
                     , hslua-packaging      >= 2.3    && < 2.4
                     , text                 >= 1.2    && < 2.2
  default-extensions:  LambdaCase
                     , OverloadedStrings

  ghc-options:         -Wall
                       -Wcpp-undef
                       -Werror=missing-home-modules
                       -Widentities
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wnoncanonical-monad-instances
                       -Wpartial-fields
                       -Wredundant-constraints
                       -fhide-source-paths
  if impl(ghc >= 8.10)
    ghc-options:         -Wunused-packages
  if impl(ghc >= 9.0)
    ghc-options:         -Winvalid-haddock

library
  import:              common-options
  build-depends:       directory            >= 1.3    && < 1.4
                     , exceptions           >= 0.8    && < 0.11
                     , hslua-marshalling    >= 2.1    && < 2.4
                     , process              >= 1.2.3  && < 1.7
                     , temporary            >= 1.2    && < 1.4
  exposed-modules:     HsLua.Module.System
  other-modules:       HsLua.Module.SystemUtils
  hs-source-dirs:      src

test-suite test-hslua-module-system
  import:              common-options
  type:                exitcode-stdio-1.0
  main-is:             test-hslua-module-system.hs
  hs-source-dirs:      test
  build-depends:       hslua-module-system
                     , tasty                >= 0.11
                     , tasty-hunit          >= 0.9
                     , tasty-lua            >= 1.0    && < 1.2
                     , text
