cabal-version:       2.2
name:                hslua-module-text
version:             1.0.2
synopsis:            Lua module for text
description:         UTF-8 aware subset of Lua's `string` module.
                     .
                     This package is part of HsLua, a Haskell framework
                     built around the embeddable scripting language
                     <https://lua.org Lua>.
homepage:            https://github.com/hslua/hslua
bug-reports:         https://github.com/hslua/hslua/issues
license:             MIT
license-file:        LICENSE
author:              Albert Krewinkel
maintainer:          albert+hslua@zeitkraut.de
copyright:           © 2017–2022 Albert Krewinkel
category:            Foreign
extra-source-files:  CHANGELOG.md
                   , test/test-text.lua
tested-with:         GHC == 8.0.2
                   , GHC == 8.2.2
                   , GHC == 8.4.4
                   , GHC == 8.6.5
                   , GHC == 8.8.3
                   , GHC == 8.10.7
                   , GHC == 9.0.1
                   , GHC == 9.2.1

source-repository head
  type:              git
  location:          https://github.com/hslua/hslua.git
  subdir:            hslua-module-text

common common-options
  default-language:    Haskell2010
  build-depends:       base                 >= 4.8    && < 5
                     , hslua-core           >= 2.1    && < 2.3
                     , hslua-packaging      >= 2.1    && < 2.3
                     , text                 >= 1.2    && < 2.1
  ghc-options:         -Wall
                       -Wincomplete-record-updates
                       -Wnoncanonical-monad-instances
                       -Wredundant-constraints
  if impl(ghc >= 8.2)
    ghc-options:         -Wcpp-undef
                         -Werror=missing-home-modules
  if impl(ghc >= 8.4)
    ghc-options:         -Widentities
                         -Wincomplete-uni-patterns
                         -Wpartial-fields
                         -fhide-source-paths

library
  import:              common-options
  exposed-modules:     HsLua.Module.Text
  hs-source-dirs:      src
  build-depends:       hslua-marshalling    >= 2.1    && < 2.3
  other-extensions:    OverloadedStrings

test-suite test-hslua-module-text
  import:              common-options
  type:                exitcode-stdio-1.0
  main-is:             test-hslua-module-text.hs
  hs-source-dirs:      test
  ghc-options:         -Wall -threaded
  build-depends:       hslua-module-text
                     , tasty                >= 0.11
                     , tasty-hunit          >= 0.9
                     , tasty-lua            >= 1.0    && < 1.1
                     , text
