cabal-version:       2.2
name:                hslua-module-text
version:             1.1.2
synopsis:            Lua module for text
description:         UTF-8 aware subset of Lua's `string` module.
                     .
                     This package is part of HsLua, a Haskell framework
                     built around the embeddable scripting language
                     <https://lua.org Lua>.
homepage:            https://github.com/hslua/hslua
bug-reports:         https://github.com/hslua/hslua/issues
license:             MIT
license-file:        LICENSE
author:              Albert Krewinkel
maintainer:          tarleb@hslua.org
copyright:           © 2017-2024 Albert Krewinkel
category:            Foreign
extra-source-files:  test/test-text.lua
extra-doc-files:     CHANGELOG.md
                   , README.md
tested-with:         GHC == 8.8.4
                   , GHC == 8.10.7
                   , GHC == 9.0.2
                   , GHC == 9.2.8
                   , GHC == 9.4.8
                   , GHC == 9.6.7
                   , GHC == 9.8.4
                   , GHC == 9.10.2
                   , GHC == 9.12.2

source-repository head
  type:              git
  location:          https://github.com/hslua/hslua.git
  subdir:            hslua-module-text

common common-options
  default-language:    Haskell2010
  build-depends:       base                 >= 4.11   && < 5
                     , hslua-core           >= 2.3    && < 2.4
                     , hslua-packaging      >= 2.3    && < 2.5

  ghc-options:         -Wall
                       -Wcpp-undef
                       -Werror=missing-home-modules
                       -Widentities
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wnoncanonical-monad-instances
                       -Wpartial-fields
                       -Wredundant-constraints
                       -fhide-source-paths
  if impl(ghc >= 8.10)
    ghc-options:         -Wunused-packages
  if impl(ghc >= 9.0)
    ghc-options:         -Winvalid-haddock

library
  import:              common-options
  exposed-modules:     HsLua.Module.Text
  hs-source-dirs:      src
  build-depends:       hslua-marshalling    >= 2.1    && < 2.4
                     , text                 >= 1.2    && < 2.2
  other-extensions:    OverloadedStrings

test-suite test-hslua-module-text
  import:              common-options
  type:                exitcode-stdio-1.0
  main-is:             test-hslua-module-text.hs
  hs-source-dirs:      test
  ghc-options:         -Wall -threaded
  build-depends:       hslua-module-text
                     , tasty                >= 0.11
                     , tasty-hunit          >= 0.9
                     , tasty-lua            >= 1.0    && < 1.2
