cabal-version:       2.2
name:                hslua-module-version
version:             1.2.0
synopsis:            Lua module to work with version specifiers.
description:         Wrapper for the Data.Version.Version Haskell type.
homepage:            https://hslua.org/
bug-reports:         https://github.com/hslua/hslua/issues
license:             MIT
license-file:        LICENSE
author:              Albert Krewinkel
maintainer:          Albert Krewinkel <tarleb@hslua.org>
copyright:           © 2019-2026 Albert Krewinkel
category:            Foreign
build-type:          Simple
extra-doc-files:     README.md
                     CHANGELOG.md
extra-source-files:  test/test-version.lua
tested-with:         GHC == 9.6
                   , GHC == 9.8
                   , GHC == 9.10
                   , GHC == 9.12

source-repository head
  type:                git
  location:            https://github.com/hslua/hslua.git
  subdir:              hslua-module-version

common common-options
  build-depends:       base              >= 4.9.1  && < 5
                     , hslua-core        >= 2.3    && < 2.4
                     , hslua-packaging   >= 2.4    && < 2.5

  ghc-options:         -Wall
                       -Wcpp-undef
                       -Werror=missing-home-modules
                       -Widentities
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wnoncanonical-monad-instances
                       -Wpartial-fields
                       -Wredundant-constraints
                       -fhide-source-paths
  if impl(ghc >= 8.10)
    ghc-options:         -Wunused-packages
  if impl(ghc >= 9.0)
    ghc-options:         -Winvalid-haddock

  default-language:    Haskell2010

library
  import:              common-options
  hs-source-dirs:      src
  exposed-modules:     HsLua.Module.Version
  build-depends:       hslua-marshalling >= 2.3    && < 2.4
                     , text              >= 1.2    && < 2.2


test-suite hslua-module-version-test
  import:              common-options
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             test-hslua-module-version.hs
  build-depends:       base
                     , hslua-module-version
                     , tasty
                     , tasty-hunit
                     , tasty-lua  >= 1.0    && < 1.2
  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N
