cabal-version:       2.2
name:                hslua-module-zip
version:             1.1.2
synopsis:            Lua module to work with file zips.
description:         Module with function for creating, modifying, and
                     extracting files from zip archives.
homepage:            https://hslua.org/
bug-reports:         https://github.com/hslua/hslua/issues
license:             MIT
license-file:        LICENSE
author:              Albert Krewinkel
maintainer:          Albert Krewinkel <tarleb@hslua.org>
copyright:           © 2020-2024 Albert Krewinkel
category:            Foreign
build-type:          Simple
extra-doc-files:     README.md
                     CHANGELOG.md
extra-source-files:  test/test-zip.lua
tested-with:         GHC == 8.4.4
                   , GHC == 8.6.5
                   , GHC == 8.8.4
                   , GHC == 8.10.7
                   , GHC == 9.0.2
                   , GHC == 9.2.8
                   , GHC == 9.4.8
                   , GHC == 9.6.3
                   , GHC == 9.8.1

source-repository head
  type:                git
  location:            https://github.com/hslua/hslua
  subdir:              hslua-module-zip

common common-options
  build-depends:       base              >= 4.11   && < 5
                     , bytestring
                     , filepath          >= 1.4    && < 1.6
                     , hslua-core        >= 2.3    && < 2.4
                     , hslua-list        >= 1.1    && < 1.2
                     , hslua-marshalling >= 2.3    && < 2.4
                     , hslua-packaging   >= 2.3    && < 2.4
                     , hslua-typing      >= 0.1    && < 0.2
                     , text              >= 1.2    && < 2.2
                     , time              >= 1.5    && < 1.14
                     , zip-archive       >= 0.4    && < 0.5

  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
  if impl(ghc >= 8.0)
    ghc-options:       -Wredundant-constraints
  if impl(ghc >= 8.2)
    ghc-options:       -fhide-source-paths
  if impl(ghc >= 8.4)
    ghc-options:       -Wmissing-export-lists
                       -Wpartial-fields
  if impl(ghc >= 8.8)
    ghc-options:       -Wmissing-deriving-strategies

  default-language:    Haskell2010

library
  import:              common-options
  hs-source-dirs:      src
  exposed-modules:     HsLua.Module.Zip

test-suite hslua-module-zip-test
  import:              common-options
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             test-hslua-module-zip.hs
  build-depends:       hslua-module-zip
                     , hslua-module-system
                     , tasty
                     , tasty-hunit
                     , tasty-lua         >= 1.0    && < 1.2
                     , text
  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N
