cabal-version:       2.2
name:                hslua-objectorientation
version:             2.2.0
synopsis:            Object orientation tools for HsLua
description:         Expose Haskell objects to Lua with an object oriented
                     interface.
homepage:            https://hslua.org/
bug-reports:         https://github.com/hslua/hslua/issues
license:             MIT
license-file:        LICENSE
author:              Albert Krewinkel
maintainer:          albert+hslua@zeitkraut.de
copyright:           © 2021-2022 Albert Krewinkel
category:            Foreign
build-type:          Simple
extra-source-files:  README.md
                   , CHANGELOG.md
tested-with:         GHC == 8.0.2
                   , GHC == 8.2.2
                   , GHC == 8.4.4
                   , GHC == 8.6.5
                   , GHC == 8.8.4
                   , GHC == 8.10.7
                   , GHC == 9.0.1
                   , GHC == 9.2.1

source-repository head
  type:                git
  location:            https://github.com/hslua/hslua.git
  subdir:              hslua-objectorientation

common common-options
  default-language:    Haskell2010
  build-depends:       base              >= 4.8    && < 5
                     , bytestring        >= 0.10.2 && < 0.12
                     , containers        >= 0.5.9  && < 0.7
                     , exceptions        >= 0.8    && < 0.11
                     , hslua-core        >= 2.2    && < 2.3
                     , hslua-marshalling >= 2.2    && < 2.3
                     , mtl               >= 2.2    && < 2.3
                     , text              >= 1.2    && < 2.1
  ghc-options:         -Wall
                       -Wincomplete-record-updates
                       -Wnoncanonical-monad-instances
                       -Wredundant-constraints
  if impl(ghc >= 8.2)
    ghc-options:         -Wcpp-undef
                         -Werror=missing-home-modules
  if impl(ghc >= 8.4)
    ghc-options:         -Widentities
                         -Wincomplete-uni-patterns
                         -Wpartial-fields
                         -fhide-source-paths
  other-extensions:    OverloadedStrings
                     , TypeApplications

library
  import:              common-options
  exposed-modules:     HsLua.ObjectOrientation
                     , HsLua.ObjectOrientation.Operation
  hs-source-dirs:      src
  default-extensions:  LambdaCase
                     , StrictData
  other-extensions:    AllowAmbiguousTypes
                     , CPP
                     , FlexibleInstances
                     , MultiParamTypeClasses
                     , ScopedTypeVariables
  c-sources:           cbits/hslobj.c

test-suite test-hslua-objectorientation
  import:              common-options
  type:                exitcode-stdio-1.0
  main-is:             test-hslua-objectorientation.hs
  hs-source-dirs:      test
  ghc-options:         -threaded -Wno-unused-do-bind
  other-modules:       HsLua.ObjectOrientationTests
  build-depends:       hslua-objectorientation
                     , lua-arbitrary        >= 1.0
                     , QuickCheck           >= 2.7
                     , quickcheck-instances >= 0.3
                     , tasty                >= 0.11
                     , tasty-hslua          >= 1.0
                     , tasty-hunit          >= 0.9
                     , tasty-quickcheck     >= 0.8
