cabal-version:       2.2
name:                hslua-objectorientation
version:             2.5.0
synopsis:            Object orientation tools for HsLua
description:         Expose Haskell objects to Lua with an object oriented
                     interface.
homepage:            https://hslua.org/
bug-reports:         https://github.com/hslua/hslua/issues
license:             MIT
license-file:        LICENSE
author:              Albert Krewinkel
maintainer:          tarleb@hslua.org
copyright:           © 2021-2024 Albert Krewinkel
category:            Foreign
build-type:          Simple
extra-source-files:  README.md
                   , CHANGELOG.md
tested-with:         GHC == 9.6
                   , GHC == 9.8
                   , GHC == 9.10
                   , GHC == 9.12

source-repository head
  type:                git
  location:            https://github.com/hslua/hslua.git
  subdir:              hslua-objectorientation

common common-options
  default-language:    Haskell2010
  build-depends:       base              >= 4.11   && < 5
                     , hslua-core        >= 2.2.1  && < 2.4
                     , hslua-marshalling >= 2.2.1  && < 2.4
                     , hslua-typing      >= 0.1    && < 0.2

  ghc-options:         -Wall
                       -Wcpp-undef
                       -Werror=missing-home-modules
                       -Widentities
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wnoncanonical-monad-instances
                       -Wpartial-fields
                       -Wredundant-constraints
                       -fhide-source-paths
  if impl(ghc >= 8.10)
    ghc-options:         -Wunused-packages
  if impl(ghc >= 9.0)
    ghc-options:         -Winvalid-haddock

  other-extensions:    OverloadedStrings
                     , TypeApplications

library
  import:              common-options
  exposed-modules:     HsLua.ObjectOrientation
                     , HsLua.ObjectOrientation.Generic
                     , HsLua.ObjectOrientation.ListType
                     , HsLua.ObjectOrientation.Operation
  hs-source-dirs:      src
  build-depends:       containers           >= 0.5.9  && < 0.9
                     , text                 >= 1.2    && < 2.2
  default-extensions:  LambdaCase
                     , StrictData
  other-extensions:    AllowAmbiguousTypes
                     , CPP
                     , FlexibleInstances
                     , MultiParamTypeClasses
                     , ScopedTypeVariables
  includes:            hslobj.h
  install-includes:    hslobj.h
  include-dirs:        cbits
  c-sources:           cbits/hslobj.c
                     , cbits/hsllist.c

test-suite test-hslua-objectorientation
  import:              common-options
  type:                exitcode-stdio-1.0
  main-is:             test-hslua-objectorientation.hs
  hs-source-dirs:      test
  ghc-options:         -threaded -Wno-unused-do-bind
  other-modules:       HsLua.ObjectOrientationTests
  build-depends:       hslua-objectorientation
                     , bytestring           >= 0.10.2 && < 0.13
                     , tasty                >= 0.11
                     , tasty-hslua          >= 1.0
