cabal-version:       2.2
name:                hslua-packaging
version:             2.3.1
synopsis:            Utilities to build Lua modules.
description:         Utilities to package up Haskell functions and
                     values into a Lua module.
                     .
                     This package is part of HsLua, a Haskell framework
                     built around the embeddable scripting language
                     <https://lua.org Lua>.
homepage:            https://hslua.org/
bug-reports:         https://github.com/hslua/hslua/issues
license:             MIT
license-file:        LICENSE
author:              Albert Krewinkel
maintainer:          tarleb@hslua.org
copyright:           © 2019-2024 Albert Krewinkel
category:            Foreign
extra-source-files:  README.md
                   , CHANGELOG.md
tested-with:         GHC == 8.8.4
                   , GHC == 8.10.3
                   , GHC == 9.0.2
                   , GHC == 9.2.8
                   , GHC == 9.4.8
                   , GHC == 9.6.7
                   , GHC == 9.8.4
                   , GHC == 9.10.2
                   , GHC == 9.12.2

source-repository head
  type:                git
  location:            https://github.com/hslua/hslua.git
  subdir:              hslua-packaging

common common-options
  default-language:    Haskell2010
  build-depends:       base                    >= 4.11   && < 5
                     , hslua-core              >= 2.2.1  && < 2.4
                     , hslua-marshalling       >= 2.2.1  && < 2.4
                     , text                    >= 1.2    && < 2.2

  ghc-options:         -Wall
                       -Wcpp-undef
                       -Werror=missing-home-modules
                       -Widentities
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wnoncanonical-monad-instances
                       -Wpartial-fields
                       -Wredundant-constraints
                       -fhide-source-paths
  if impl(ghc >= 8.10)
    ghc-options:         -Wunused-packages
  if impl(ghc >= 9.0)
    ghc-options:         -Winvalid-haddock

library
  import:              common-options
  exposed-modules:     HsLua.Packaging
                     , HsLua.Packaging.Convenience
                     , HsLua.Packaging.Documentation
                     , HsLua.Packaging.Function
                     , HsLua.Packaging.Module
                     , HsLua.Packaging.Rendering
                     , HsLua.Packaging.Types
                     , HsLua.Packaging.UDType
  hs-source-dirs:      src
  default-extensions:  LambdaCase
                     , StrictData
  other-extensions:    DeriveFunctor
                     , OverloadedStrings
  build-depends:       containers              >= 0.5.9  && < 0.9
                     , hslua-objectorientation >= 2.3    && < 2.4
                     , hslua-typing            >= 0.1    && < 0.2

test-suite test-hslua-packaging
  import:              common-options
  type:                exitcode-stdio-1.0
  main-is:             test-hslua-packaging.hs
  hs-source-dirs:      test
  ghc-options:         -threaded
  other-modules:       HsLua.PackagingTests
                     , HsLua.Packaging.DocumentationTests
                     , HsLua.Packaging.FunctionTests
                     , HsLua.Packaging.ModuleTests
                     , HsLua.Packaging.RenderingTests
                     , HsLua.Packaging.UDTypeTests
  build-depends:       hslua-packaging
                     , bytestring
                     , tasty-hslua
                     , tasty                   >= 0.11
                     , tasty-hunit             >= 0.9
  other-extensions:    OverloadedStrings
                     , TypeApplications
