cabal-version:       2.2
name:                hslua
version:             2.0.0
synopsis:            Bindings to Lua, an embeddable scripting language
description:         HsLua provides wrappers and helpers
                     to bridge Haskell and <https://www.lua.org/ Lua>.
                     .
                     It builds upon the /lua/ package, which allows to bundle
                     a Lua interpreter with a Haskell program.
                     .
                     <https://github.com/hslua/hslua-examples Example programs>
                     are available in a separate repository.
homepage:            https://hslua.github.io/
bug-reports:         https://github.com/hslua/hslua/issues
license:             MIT
license-file:        LICENSE
author:              Albert Krewinkel, Gracjan Polak, Ömer Sinan Ağacan
maintainer:          albert+hslua@zeitkraut.de
copyright:           © 2007–2012 Gracjan Polak;
                     © 2012–2016 Ömer Sinan Ağacan;
                     © 2017-2021 Albert Krewinkel
category:            Foreign
build-type:          Simple
extra-source-files:  README.md
                   , CHANGELOG.md
                   , test/lua/*.lua
tested-with:         GHC == 8.0.2
                   , GHC == 8.2.2
                   , GHC == 8.4.4
                   , GHC == 8.6.5
                   , GHC == 8.8.4
                   , GHC == 8.10.3

source-repository head
  type:                git
  location:            https://github.com/hslua/hslua.git

common common-options
  default-language:    Haskell2010
  build-depends:       base              >= 4.8    && < 5
                     , bytestring        >= 0.10.2 && < 0.11
                     , containers        >= 0.5.9  && < 0.7
                     , exceptions        >= 0.8    && < 0.11
                     , hslua-core        >= 2.0    && < 2.1
                     , hslua-marshalling >= 2.0    && < 2.1
                     , hslua-packaging   >= 2.0    && < 2.1
                     , mtl               >= 2.2    && < 2.3
                     , text              >= 1.0    && < 1.3
  ghc-options:         -Wall
                       -Wincomplete-record-updates
                       -Wnoncanonical-monad-instances
                       -Wredundant-constraints
  if impl(ghc >= 8.2)
    ghc-options:         -Wcpp-undef
                         -Werror=missing-home-modules
  if impl(ghc >= 8.4)
    ghc-options:         -Widentities
                         -Wincomplete-uni-patterns
                         -Wpartial-fields
                         -fhide-source-paths
  if impl(ghc < 8.8)
    build-depends:       base-compat          >= 0.10
    hs-source-dirs:      prelude
    other-modules:       Prelude

library
  import:              common-options
  exposed-modules:     HsLua
                     , HsLua.Util
  reexported-modules:  HsLua.Core
                     , HsLua.Core.Error
                     , HsLua.Core.Types
                     , HsLua.Core.Utf8
  hs-source-dirs:      src
  default-extensions:  LambdaCase
  other-extensions:    DeriveDataTypeable
                     , DeriveFunctor
                     , OverloadedStrings
                     , TypeApplications

test-suite test-hslua
  import:              common-options
  type:                exitcode-stdio-1.0
  main-is:             test-hslua.hs
  hs-source-dirs:      test
  ghc-options:         -threaded -Wno-unused-do-bind
  other-modules:       HsLuaTests
                     , HsLua.UtilTests
  build-depends:       hslua
                     , lua-arbitrary        >= 1.0
                     , QuickCheck           >= 2.7
                     , quickcheck-instances >= 0.3
                     , tasty-hslua
                     , tasty                >= 0.11
                     , tasty-hunit          >= 0.9
                     , tasty-quickcheck     >= 0.8
  other-extensions:    DeriveDataTypeable
                     , LambdaCase
                     , OverloadedStrings
                     , TypeApplications
